CCD-6810: New endpoint to retrieve ShellCaseMapping tab definition